Good days work lots of stuff done.

--- a/_/less/breadcrumbs.less
+++ b/_/less/breadcrumbs.less
@@ -1,3 +1,12 @@
 #breadcrumbs {
-
+	.txt-col-grayDk;
+	.font-size(1.6);
+	.line-h(1.6);
+	.mag-bot(3);
+	a {
+	.txt-col-grayDk;
+		&:active {
+		.txt-col-red;
+		}	
+	}
 }
