--- a/_/less/btns.less
+++ b/_/less/btns.less
@@ -1,1 +1,39 @@
+#continue-read-btn {
+.no-rounded;
+.border(@grayDk; 0.1);
+.bg-col(@wht);
+.pad-all(1);
+.font-size(2);
+.line-h(2);	
+.txt-col-red;
+	i {
+	.fright;
+	.font-size(2);
+	.line-h(2);	
+	.txt-col-gray;	
+	}
+	
+	&:active {
+	.bg-col-grayDk;
+	.txt-col-wht;
+		i {
+		.txt-col-gray-lt;	
+		}
+	}
+}
 
+#close-content-extra-btn {
+.rounded(100%);
+.abs;
+.right(0);
+.bottom(0);	
+.w(5);
+.h(5);
+.border(@grayDk; 0.1);
+.txt-col-grayDk;
+.font-size(2);
+	&:active {
+	.bg-col-grayDk;
+	.txt-col-wht;
+	}
+}
