--- a/_/less/footer.less
+++ b/_/less/footer.less
@@ -1,3 +1,72 @@
 #footer-info {
+.pad-bot(3);
+	.legal-nav {
+	.font-size(	1.4);	
+	.line-h(1.4);
+	.mag-bot(2);
+		li {
+		.pad-left(1);
+		.pad-right(1);	
+		.border-left(@grayDk; 0.1);
+			&:first-child {
+			.no-border;	
+			}
+		}
+		a {
+		.txt-col-grayDk;
+			&:active {
+			.txt-col-red;
+			}	
+		}		
+	}
+	
+	.compliance-notice {
+	.font-size(	1.2);	
+	.line-h(1.4);
+	.mag-bot(2); 
+		a {
+		.txt-col-grayDk;
+			&:active {
+			.txt-col-red;
+			}	
+		}
+		p {
+		.font-size(	1.2);	
+		.line-h(1.4);	
+		}
+	}
+	
+	.social-links {
+		a {
+		.block;
+		.txt-col-wht;
+		.no-text-dec;
+		.w(4);
+		.h(4);
+		.border(@grayDk; 0.1);
+		.rounded(100%);
+		.bg-col-grayDk;
+		
+			i {
+			.block;
+			.line-h(3.8);
+			.font-size(2);
+			text-align: center;
+			}
+			
+			span.fontawesome-text {
+			.sr-only;
+			}	
+			
+			&:active {
+			.bg-col(@trans);
+			
+				i {
+				.txt-col-grayDk;
+				}
+			}
+		}	
+	}
+
 
 }
