--- a/_/less/mixins.less
+++ b/_/less/mixins.less
@@ -143,47 +143,20 @@ background-color: @col;
 .bg-col-purple {
 .bg-col(@purple);	
 }
-.bg-col-purple-dk {
-.bg-col(@purple-dk);	
-}
-.bg-col-purple-lt {
-.bg-col(@purple-lt);	
-}
 .bg-col-green {
 .bg-col(@green);	
 }
 .bg-col-green-dk {
 .bg-col(@green-dk);	
 }
-.bg-col-green-lt {
-.bg-col(l@green-lt);
-}
 .bg-col-pink {
 .bg-col(@pink);	
-}
-.bg-col-pink-dk {
-.bg-col(@pink-dk);	
-}
-.bg-col-pink-lt {
-.bg-col(@pink-lt);
 }
 .bg-col-orange {
 .bg-col(@orange);	
 }
-.bg-col-orange-dk {
-.bg-col(@orange-dk);	
-}
-.bg-col-orange-lt {
-.bg-col(@orange-lt);	
-}
 .bg-col-blue {
 .bg-col(@blue);	
-}
-.bg-col-blue-dk {
-.bg-col(@blue-dk);	
-}
-.bg-col-blue-lt {
-.bg-col(@blue-lt);	
 }
 
 .bg-col-facebook {
@@ -437,6 +410,9 @@ border-radius: 0px;
 .mag-bot(3);
 .h(0.1);
 .rel;
+	&.mag-top-40 {
+	.mag-top(4);	
+	}
 	&:before, &:after {
 	content: "";
 	position: absolute;
