--- a/_/less/offline.less
+++ b/_/less/offline.less
@@ -231,7 +231,7 @@ padding: 0px 20px 0px 20px;
 opacity: 0.0;
 color: #7a003c;
 text-decoration: none;
-	&:hover, &:active, &:focus {
+	&:active {
 	background-color: white;
 	background-color: hsla(hue(white), saturation(white), lightness(white), 0.7);
 	opacity: 1.0;	
