--- a/_/less/toolkit.less
+++ b/_/less/toolkit.less
@@ -1,5 +1,194 @@
 // TOOLKIT BANNER STYLES
-.toolkit-banner {}
+.toolkit-info {
+	
+	.tk-info-wrap {
+	.rel;		
+	}
+	
+	.tk-img {
+	.w(20);
+	.h(20);
+	.abs;
+	.right(2);
+	.top(2);
+	.bg-repeat(no-repeat);
+	background-position: center center;
+	.bg-size;
+	.rounded(100%);	
+		
+		&:before {
+		content: "";
+		.abs;
+		.left (-1);
+		.right (-1);
+		.top(-1);
+		.bottom (-1);
+		.rounded(100%);
+		.bg-col(@wht);
+		.opacity(0.5);	
+		}
+		
+		&:after {
+		content: "";
+		.abs;
+		.left (-1);
+		.right (-1);
+		.top(-1);
+		.bottom (-1);
+		.rounded(100%);
+		.border(@grayDk; 0.1);	
+		}
+	}
 
-// TOOLKIT SLIDER STYLES
-.toolkit-txt-section {}
+		
+	.tk-info-txt {
+	.pad-right(25);	
+		a {
+		.col(@red);
+		.bold;
+			&:hover, &:active, &:focus {
+			.col(@redMid);
+			}
+		}
+		
+		p, ul, ol {
+		.font-size(1.6);
+		.line-h(2);	
+		.mag-bot(3);
+			&:last-child {
+			.mag-bot(0);	
+			}
+		}
+	
+		//Unordered list
+		ul {
+		list-style: none;
+		.pad-left(2);
+		.mag-bot(2);
+			li {
+			.pad-left(2);
+			.rel;
+			}
+			li:before {
+			.abs;
+			.left(0);
+			content: "\00BB";
+			.col(@gray);
+			.bold;		
+			.mag-right(1);
+			}
+			
+			&.cols-2 {
+			.columns(50%, 2, 30px, @trans, none, 0px);
+			}
+			
+		}
+		
+		//Ordered list
+		ol {
+		list-style: none;
+		.pad-left(2);
+		.mag-bot(2);
+		list-style-position: inside;
+		counter-reset: item;
+			li {
+			//counter-increment: list-counter;
+			//.pad-left(2);
+			.rel;
+				&:before {
+				content: counters(item, ".") " - ";
+				counter-increment: item;
+				.col(@gray);
+				.bold;
+				}
+			}
+		}
+		
+		blockquote {
+		.italic;
+		.col(@gray);
+		.border-col( lighten(@grayDk, 20%) );	
+		.pad-top(0.5);
+		.pad-bot(0.5);
+		}
+		
+		h2, h3 {
+		.font-size(3);
+		.line-h(3.5);
+		.mag-bot(2);
+		.txt-col-red;
+		}
+		
+		h4, h5 {
+		.font-size(1.8);
+		.line-h(2.2);
+		.mag-bot(1);
+		.txt-col-gray;
+		}	
+	}
+}
+
+// TOOLKIT SECTION
+#toolkit-section {
+	
+	a {
+		.block;
+		.h(27);
+		.rel;
+		.no-text-dec;
+		.over-hide;
+			
+			span.bg-img {
+			.abs;
+			.top(0);
+			.left(0);
+			.right(0);
+			.bottom(0);
+			.bg-size;
+			.bg-repeat(no-repeat);
+			background-position: center center;	
+			.transition;	
+			}	
+				
+			span.title {
+			.abs;
+			.top(0);
+			.left(0);
+			.right(0);
+			.bottom(0);	
+			.trans-bg(@wht; 0.8);
+			.pad(0;2;0;2);
+			.txt-col-grayDk;
+			.transition;
+			.text-center;
+			.line-h(27);
+			.font-size(3);
+			.font-slab-serif;
+				span {
+				.in-block;
+				vertical-align: middle;
+				.line-h(3);	
+				}	
+			}
+			
+			&:hover, &:active, &:focus {
+				span.link-bg-img {
+				.top(-2);
+				.left(-2);
+				.right(-2);
+				.bottom(-2);
+				-webkit-filter: blur(5px);
+				-moz-filter: blur(5px);
+				-o-filter: blur(5px);
+				-ms-filter: blur(5px);
+				filter: blur(5px);	
+				}
+				
+				span.title {
+				.trans-bg(@red; 0.8);
+				.txt-col-wht;	
+				}
+			}
+
+		}
+}
