--- a/_/less/top-nav.less
+++ b/_/less/top-nav.less
@@ -38,7 +38,7 @@ overflow: hidden;
 		i {
 		.mag-top(-1);	
 		}
-		&:hover, &:active, &:focus {
+		&:active {
 		.bottom(-0.5);
 		}
 	}
@@ -66,7 +66,7 @@ overflow: hidden;
 			.sr-only;
 			}	
 			
-			&:hover, &:active, &:focus {
+			&:active {
 			.bg-col-grayDk;
 				i {
 				.txt-col-wht;	
@@ -91,7 +91,7 @@ overflow: hidden;
 		.pad-all(2);
 		.border(@grayDk; 0.1);
 		.transition;
-			&:hover, &:active, &:focus {
+			&:active {
 			.txt-col-red;
 			}
 		}
