--- a/_/less/user-styles.less
+++ b/_/less/user-styles.less
@@ -59,7 +59,7 @@ body#login {
 			.font-slab-serif;
 			.h(5);
 			.font-size(2);
-				&:hover, &:active, &:focus {
+				&:active {
 				.bg-col(lighten(@gray, 10%));
 				}
 			}
@@ -85,7 +85,7 @@ body#login {
 			.border(@grayDk, 0.1);
 			.caps;
 			.font-size(1.4);
-				&:hover, &:active, &:focus {
+				&:active {
 				.bg-col(@gray);
 				.col(white);
 				}	
@@ -111,7 +111,7 @@ body#login {
 	.no-rounded;
 	.bg-col(@red);
 	.col(white);
-		&:hover, &:active, &:focus {
+		&:active {
 		.col(@grayDk);	
 		}
 	}
@@ -120,7 +120,7 @@ body#login {
 	.left(0);	
 		#user-btn {
 		.col(@grayDk);
-			&:hover, &:active, &:focus {
+			&:active {
 			.col(white);
 			}
 		}
@@ -151,7 +151,7 @@ body#login {
 		.col(white);
 		text-align: center;
 		.no-text-dec;
-			&:hover, &:active, &:focus {
+			&:active {
 			.col(@grayDk);
 			.bg-col(@grayLt);	
 			}
