--- a/_/less/vars.less
+++ b/_/less/vars.less
@@ -30,14 +30,7 @@
 @headwayCol: #585d8a; 
 @awardsGreen: #036937;
 @awardsLtGreen: #75bd69;
-
-/* MP COLORS */
-@mpgreen: #157b80;
-@mpblue: #0082c7;
-@mporange: #e8841e;
-@mpgray: #a1a4a7;
-@mpgrayDk: #4b565c;
-@mpgrayDker: #242a2c;
+@feefoCol: #ffde0f;
 
 /* SOCIAL COLOURS */
 @twitter_blue: #00aced;
