--- a/_/less/xmas-styles.less
+++ b/_/less/xmas-styles.less
@@ -51,7 +51,7 @@ text-align: center;
 		.col(@green);
 		}	
 		
-		&:hover, &:active, &:focus {
+		&:active {
 		.bg-col(darken(red, 20%));
 		}
 	}
@@ -166,7 +166,7 @@ z-index: 1000;
 			.col(@green);
 			}
 			
-			&:hover, &:active, &:focus {
+			&:active {
 			.bg-col(darken(red, 20%));
 			}
 		}
