--- a/_/less/header.less
+++ b/_/less/header.less
@@ -12,7 +12,7 @@ z-index: 2;
 	a.logo {
 	.block;
 	.h(7.5);
-	.w(22);
+	.max-w(22);
 	.bg-img("tlw-logo-wide.png");
 	.bg-repeat(no-repeat);
 	background-position: left center;
