--- a/_/less/pagination.less
+++ b/_/less/pagination.less
@@ -1,5 +1,42 @@
-.page-num {}
-
-.page-links {}
-
-.vacs-page-links {}
+.wp-pagenavi {
+.font-slab-serif;
+	span.pages {
+	.in-block;
+	.border-col(@grayDk);
+	.pad-all(1);
+	.min-w(4);
+	.caps;	
+	}
+	
+	span.extend {
+	.in-block;
+	.border-col(@grayDk);
+	.pad-all(1);
+	.min-w(4);	
+	.text-center;
+	.txt-col-grayDk;
+	}
+	
+	span.current {
+	.in-block;
+	.border-col(@grayDk);
+	.pad-all(1);
+	.min-w(4);	
+	.text-center;
+	.bg-col-grayDk;
+	.txt-col-wht;
+	}
+	
+	a.page, a.previouspostslink, a.nextpostslink, a.last {
+	.in-block;
+	.border-col(@grayDk);	
+	.pad-all(1);
+	.min-w(4);
+	.text-center;
+	.txt-col-grayDk;
+	.no-text-dec;
+		&:hover, &:active, &:focus {
+		.txt-col-red;
+		}
+	}
+}
