--- a/_/less/post-list.less
+++ b/_/less/post-list.less
@@ -1,5 +1,129 @@
-.post-list {}
+.post-list {	
+	article.post, article.page, article.tlw_vacancies_cpt {	
+		.label {
+		.font-size(1);
+		.line-h(1);
+		.pad-all(1);
+		.caps;
+		.bg-col-gray;
+		.mag-bot(0.5);
+		}
+		h4 {
+		.col(@grayDk);	
+		.font-size(2.5);
+		.line-h(3);
+		}
+		
+		p {
+		.font-size(1.6);
+		.line-h(2);
+		.col(@grayDk);	
+		.mag-bot(0);
+		}
+		
+		time {
+		.col(@red);
+		.block;
+		.mag-bot(1);
+		//text-align: center;
+			span {
+			.block;	
+			}
+			
+			span.month, span.year {
+			.bg-col(@gray);
+			.col(white);
+			.caps;
+			.font-size(1.2);
+			.line-h(2);
+			}
+			
+			span.day {
+			.bg-col(lighten(@gray, 20%));
+			.col(@redMid);
+			.bold;
+			.font-size(3);	
+			.line-h(5);
+			.border-top(white; 0.4);
+			.border-bot(white; 0.4);
+			}
+		}
+	
+		a {
+		.rel;
+		.no-text-dec;
+		.mag-top(1.5);
+		.pad-all(0);
+		.line-h(4);
+		text-align: left;
+		.indent(1.5);
+		.border(@grayDk; 0.1);
+		.no-rounded;
+		.bg-col(@wht);
+		.txt-col-grayDk;
+		.font-slab-serif;
+		.caps;
+		.font-size(2);
+		.mag-bot(0);
+			&:after {
+			content: "\f105";	
+			font-family: FontAwesome;	
+			.abs;
+			.right(0);
+			.top(0);
+			.line-h(4);
+			.h(4);
+			.pad-right(2);	
+			}
+				
+			&:hover, &:active, &:focus {
+			.bg-col-grayDk;	
+			.txt-col-wht;
+			}	
+		}
+	}
+	
+}
 
-.search-list {}
+.search-list {
+	
+	article.post, article.page {
 
-.posts-message {}
+		h4 span.search-everything-highlight-color {
+		.col(white);
+		.pad(0; 0.5; 0; 0.5);	
+		.font-size(3);
+		.line-h(3.5);
+		}
+			
+		time {
+		text-align: left;	
+		}	
+			
+		p span.search-everything-highlight-color {
+		.col(white);	
+		.pad(0; 0.2; 0; 0.2);	
+		}
+	}
+	
+	.page-links {
+	border-bottom: none;	
+	}
+}
+
+.posts-message {
+.bg-col(@wht);
+.txt-col-grayDk;
+.no-rounded;
+.border(@grayDk; 0.1);
+	h3 {
+	.font-size(5);	
+	.line-h(5.5);
+	.txt-col-red;
+	}	
+	
+	p {
+	.font-size(2);
+	.line-h(3);
+	}
+}
