--- a/_/less/criticalCSS.less
+++ b/_/less/criticalCSS.less
@@ -24,6 +24,17 @@
 @blue-lt: #99B8C7;
 @trans: transparent;
 
+.drop-shadow(@x-axis: 0, @y-axis: 1px, @blur: 2px, @alpha: 0.1) {
+  -webkit-box-shadow: @x-axis @y-axis @blur rgba(0, 0, 0, @alpha);
+  -moz-box-shadow: @x-axis @y-axis @blur rgba(0, 0, 0, @alpha);
+  box-shadow: @x-axis @y-axis @blur rgba(0, 0, 0, @alpha);
+}
+
+.bg-img(@img){
+@imgSrc: @img;
+background-image: ~"url(/wp-content/themes/tlwsolicitors-tablet-v6/_/css/img/@{imgSrc})";
+}
+
 html {
 width: 100%;
 height: 100%;	
@@ -38,6 +49,7 @@ padding: 0;
 margin: 0;
 overflow: hidden;
 opacity: 1;
+font-family: sans-serif;
 
 	* {
 	box-sizing: border-box;	
@@ -700,4 +712,80 @@ opacity: 1;
 		
 	}
 
+}
+
+.no-js {
+	body.atfc-tablet-css {
+		
+		&.loading {
+		-webkit-filter: blur(0px);
+		-moz-filter: blur(0px);
+		-o-filter: blur(0px);
+		-ms-filter: blur(0px);
+		filter: blur(0px);	
+		}
+		
+		.no-script-wrap {
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		bottom: 0px;
+		right: 0px;
+		background-color: @grayDk;
+		z-index: 1000;
+		
+			.no-script-inner-wrap {
+				text-align: center;	
+				padding: 20px;
+				height: 100%;
+				
+				&:before {
+					content: "";
+					display: inline-block;
+					height: 100%;
+					vertical-align: middle;
+					margin-right: -0.25em;
+				}
+			}
+		
+			.no-script-inner {
+			display: inline-block;
+			vertical-align: middle;
+			width: 80%;
+			max-width: 500px;
+			border: 5px solid @red;
+			.drop-shadow(0, 0, 20px, 0.7);
+			background-color: white;
+			.bg-img('tlw-logo-wide.png');
+			background-repeat: no-repeat;
+			background-position: center 20px;
+			padding: 20px;
+			
+				h3 {
+					color: @red;
+					margin-top: 90px;
+					text-align: center;	
+				}
+				
+				p {
+				text-align: center;
+				font-weight: bold;
+				margin-bottom: 30px;	
+				}
+				
+				a.btn {
+				display: block;
+				text-decoration: none;
+				padding: 10px;
+				text-transform: uppercase;
+				background-color: @red;
+				color: white;
+					&:active {
+					background-color: @redMid;
+					}	
+				}
+			}
+		}
+
+	}
 }
