--- a/_/less/global.less
+++ b/_/less/global.less
@@ -34,19 +34,29 @@ opacity: 1;
 	&.modal-open,
 	&.search-open,
 	&.route-finder-open,
-	&.video-open {
+	&.video-open,
+	&.loading {
 	overflow: hidden;
 		.tlw-wrapper > * {
 		-webkit-filter: blur(5px);
-		-moz-filter: blur(5px);
-		-o-filter: blur(5px);
-		-ms-filter: blur(5px);
 		filter: blur(5px);	
 		overflow: hidden;
 		pointer-events: none;	
 		}	
 	}
 
+}
+
+.no-js {
+	body.loading {
+	overflow: auto;
+		.tlw-wrapper > * {
+		overflow: auto;
+		pointer-events: auto;
+		-webkit-filter: blur(0px);
+		filter: blur(0px);
+		}		
+	}
 }
 
 a {
@@ -171,119 +181,5 @@ z-index: 1000;
 	.col-blue {
 	.bg-col(@blue);	
 	.no-border;
-	}
-}
-
-#search-pop-up {
-.fixed;
-.top(0);
-.left(0);
-.bottom(0);	
-.right(0);
-.animated;
-.trans-bg(@grayDk; 0.7);
-z-index: 99999;
-	
-	.search-pop-up-inner-wrap {
-		text-align: center;	
-		.pad-all(2);
-		height: 100%;
-		
-		&:before {
-			content: "";
-			.in-block;
-			height: 100%;
-			vertical-align: middle;
-			margin-right: -0.25em;
-		}	
-	}
-	
-	.search-pop-up-inner {
-	.in-block;
-	vertical-align: middle;
-	width: 90%;
-	.rounded(20px);
-	.drop-shadow(0, 0, 20px, 0.7);
-	.bg-col(white);
-	.pad-all(3);	
-	.animated;
-	.rel;
-	}
-	
-	button#close-search {
-	.abs;
-	.right(-1);
-	.top(-1);
-	.no-border;
-	.pad-all(0);
-	.w(3);
-	.h(3);
-	.rounded(15px);
-	.bg-col(white);
-	.col(@gray);
-		&:active {
-		.bg-col(@gray);
-		.col(white);
-		}	
-		
-		i {
-		.block;
-		text-align: center;
-		.line-h(3);	
-		}
-	}
-	
-	#search-form {
-	.mag-bot(0);
-		input.search-query {
-		max-width: inherit;
-		width: 70%;
-		.fleft;
-		.border-radius(0, 0, 8px, 8px);
-		}
-		
-		.search-btn-wrap {
-		.fright;	
-		width: 30%;	
-		.rel;
-			.search-submit {
-			width: 100%;
-			.border-radius( 8px, 8px, 0, 0);
-			.caps;
-			.font-slab-serif;	
-			.font-size(1.4);
-				&:active {
-				.bg-col(@gray);
-				.col(white);
-				}	
-			}
-			
-			i {
-			.abs;
-			.top(0);
-			.right(2);
-			.line-h(5);	
-			.col(@wht);
-			}
-		}
-	}
-	
-	&.off {
-	.none;	
-	}
-	
-	&.turn-off {
-	.fadeOut;
-		.search-pop-up-inner {
-		.slideOutUp;	
-		}	
-	}
-	
-	&.on {
-	.fadeIn;
-	z-index: 2000;	
-		.search-pop-up-inner {
-		.slideInDown;
-		}
 	}
 }
